[package]
name = "visualize-rs"
version = "0.1.0"
rust-version = "1.70"
edition = "2021"

[dependencies]
ash = { version = "0.37.0", features = ["linked"] }
ash-window = "0.12.0"
cpal = "0.14.2"
filetime = "0.2.18"
log = "0.4.17"
raw-window-handle = "0.5.0"
realfft = "3.1.0"
rustfft = "6.1.0"
simple_logger = "4.0.0"
winit = "0.27.5"
glsl = "*"
clap = { version = "4.3.1", features = ["derive"] }
pulsectl-rs = "0.3.2"
