[package]
name = "visualize-rs"
version = "0.1.0"
rust-version = "1.70"
edition = "2021"

[profile.release]
debug = true

[dependencies]
ash = { version = "0.37.0", features = ["linked"] }
ash-window = "0.12.0"
cpal = "0.14.2"
filetime = "0.2.18"
raw-window-handle = "0.5.0"
realfft = "3.1.0"
rustfft = "6.1.0"
winit = "0.27.5"
glsl = "*"
clap = { version = "4.3.1", features = ["derive"] }
shaderc = "0.8.2"
tokio = { version = "1.31.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
futures = "0.3.28"
byteorder = "1.4.3"
libpulse-binding = "2.28.1"
ctrlc = "3.4.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = "0.4.40"
